# MAGRAY

./: .claude_project_cache.json  .gitignore  AGENTS.md  CODEOWNERS  Cargo.toml  Clippy.toml  README.md  TODO.md  context.md  daemon.err  daemon.out  daemon2.out  deny.toml  hook-input-debug.json  plan.md  post-context.txt  rustfmt.toml
.claude/: settings.local.json
.codex/: codex.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: toolchain.yml
apps/atom-ext-host-node/: Cargo.toml
apps/atom-ext-host-node/src/: main.rs
apps/atom-ide/: Cargo.toml
apps/atom-ide/src/: main.rs
apps/atom-ide/tests/: e2e_headless.rs  e2e_headless_backpressure.rs  e2e_headless_deadline.rs  e2e_ui.rs
apps/atomd/: Cargo.toml
apps/atomd/src/: main.rs
apps/atomd/tests/: e2e.rs
crates/atom-ai/: Cargo.toml
crates/atom-atom-compat/: Cargo.toml
crates/atom-atom-compat/src/: lib.rs
crates/atom-core/: Cargo.toml
crates/atom-core/src/: lib.rs
crates/atom-ext-host/: Cargo.toml
crates/atom-index/: Cargo.toml
crates/atom-index/src/: lib.rs
crates/atom-ipc/: Cargo.toml
crates/atom-ipc/src/: lib.rs
crates/atom-ipc/tests/: cancel.rs  roundtrip.rs
crates/atom-lsp/: Cargo.toml
crates/atom-lsp/src/: lib.rs
crates/atom-persistence/: Cargo.toml
crates/atom-plugin/: Cargo.toml
crates/atom-sandbox/: Cargo.toml
crates/atom-settings/: Cargo.toml
crates/atom-settings/src/: lib.rs
crates/atom-ui/: Cargo.toml
crates/atom-ui/src/: lib.rs
docs/: Plan_context.md  atom-ide.md  context.md  plan.md
docs/RFC/: 0000-template.md
docs/policies/: no-mock.md
docs/rfcs/: 0001-slint-hotkeys-msrv.md
scripts/: check_no_ms_marketplace.sh  check_no_webview.sh  run_e2e.ps1  vendor.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: placeholder.txt
src-tauri/src/: dependency_injection.rs  error_handling.rs  indexing_engine.rs  lib.rs  logging.rs  main.rs  project_manager.rs  text_engine.rs
