[package]
name = "atom-ide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Atom IDE - Main UI application"

[dependencies]
# Core dependencies
tokio.workspace = true
serde.workspace = true

# UI framework (optional)
slint = { workspace = true, optional = true }

# IPC and workspace crates
atom-ui = { path = "../../crates/atom-ui", default-features = false, optional = true }
atom-ipc = { path = "../../crates/atom-ipc" }
atom-settings = { path = "../../crates/atom-settings" }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"
fs4 = "0.8"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wait-timeout = "0.2"
tokio = { version = "1.40", features = ["rt-multi-thread","macros","time","net"] }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging","Win32_Foundation"] }

[features]
default = []
ui = ["slint", "atom-ui/ui", "dep:atom-ui"]
winit-ui = ["dep:winit"]

[dependencies.winit]
version = "0.29"
optional = true
