[package]
name = "atom-atom-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Atom IDE Legacy Atom package compatibility layer"

[dependencies]
# Core async runtime
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"

# CoffeeScript transpilation via Node.js (stable alternative)
# swc_core = "0.106"  # Disabled due to version conflicts
# swc_ecma_parser = "0.147"
# swc_ecma_transforms = "0.236"

# Error handling
thiserror.workspace = true
tracing.workspace = true

# File system operations
walkdir = "2.5"
dirs = "5.0"

# Workspace dependencies
atom-ipc = { path = "../atom-ipc" }
atom-core = { path = "../atom-core" }
atom-settings = { path = "../atom-settings" }