[package]
name = "atom-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Atom IDE configuration and settings management"

[dependencies]
# Core dependencies
tokio.workspace = true
serde.workspace = true

# Configuration formats
serde_json = "1.0"
toml = "0.8"

# Additional dependencies
thiserror = "2.0"
dirs = "5.0"
tracing = "0.1"

atom-ipc = { path = "../atom-ipc" }